k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stellaratlas
  labels:
    name: stellaratlas
    app.kubernetes.io/name: stellaratlas
    app.kubernetes.io/part-of: stellaratlas
